--- a/custom.css
+++ b/custom.css
@@ -135,6 +135,8 @@ h2 {
     background-color: rgba(199,110,110,0.9);
     color: white;
     padding: 5%;
+    padding-right: 10px;
+    padding-left: 10px;
     margin: 2%;
 }
 
